--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -142,6 +142,14 @@ button {
     white-space: normal !important;
 }
 
+.opacity-50 {
+    opacity: 0.5;
+}
+
+.opacity-30 {
+    opacity: 0.3;
+}
+
 .form-control {
     height: 2.4rem;
 }
